<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.example.demovmtests.widget.TextInputView
        android:id="@+id/update_user_profile_title_dropdown"
        style="@style/AppTheme.L1"
        android:layout_width="100dp"
        android:layout_height="92dp"
        android:layout_marginTop="@dimen/spacing_all_medium_large"
        android:drawableEnd="@drawable/expand_more"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile_title_label" />

    <com.example.demovmtests.widget.TextInputView
        android:id="@+id/update_user_profile_first_name"
        style="@style/AppTheme.L1"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:inputType="textCapWords|textCapSentences"
        android:maxLines="1"
        android:nextFocusDown="@+id/update_user_profile_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update_user_profile_title_dropdown"
        app:layout_constraintTop_toTopOf="@+id/update_user_profile_title_dropdown"
        app:restrictSpecialCharacters="true"
        app:title="@string/profile_first_name_label" />

    <com.example.demovmtests.widget.TextInputView
        android:id="@+id/update_user_profile_surname"
        style="@style/AppTheme.L1"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginTop="80dp"
        android:inputType="textCapWords|textCapSentences"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/update_user_profile_first_name"
        app:restrictSpecialCharacters="true"
        app:title="@string/profile_surname_label" />

    <com.example.demovmtests.widget.TextInputView
        android:id="@+id/update_user_profile_country_code_drop_down"
        style="@style/AppTheme.L1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:drawableEnd="@drawable/expand_more"
        android:inputType="none"
        app:layout_constraintEnd_toStartOf="@+id/update_user_profile_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_user_profile_surname"
        app:layout_constraintTop_toTopOf="@+id/update_user_profile_surname"
        app:title="@string/user_profile_country_code_label" />

    <com.example.demovmtests.widget.TextInputView
        android:id="@+id/update_user_profile_phone_number"
        style="@style/AppTheme.L1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update_user_profile_country_code_drop_down"
        app:layout_constraintTop_toTopOf="@+id/update_user_profile_surname"
        app:title="@string/user_profile_phone_number_label" />

    <com.example.demovmtests.widget.TextInputView
        android:id="@+id/update_user_profile_date_of_birth"
        style="@style/AppTheme.L1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_all_xlarge_large"
        android:layout_marginTop="80dp"
        android:drawableEnd="@drawable/expand_more"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@+id/update_user_profile_country_code_drop_down"
        app:layout_constraintTop_toTopOf="@+id/update_user_profile_phone_number"
        app:title="@string/user_profile_date_of_birth_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_user_profile_save_changes_button"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_all_medium"
        android:layout_marginTop="@dimen/spacing_all_large_small"
        android:layout_marginEnd="@dimen/spacing_all_medium"
        android:text="@string/update_user_profile_save_changes_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_user_profile_date_of_birth" />

</androidx.constraintlayout.widget.ConstraintLayout>

